--- a/sass/style.scss
+++ b/sass/style.scss
@@ -379,6 +379,9 @@ header .navbar .logo {
                   .ph {
                       float: left;
                       padding-right: 16px;
+                      img {
+                        width: 30px;
+                      }
                   }
                   a p {
                       float: left;
@@ -394,6 +397,9 @@ header .navbar .logo {
                   .emailimg {
                       float: left;
                       padding-right: 16px;
+                      img {
+                        width: 30px;
+                      }
                   }
                   a p {
                       float: left;
