--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -446,7 +446,11 @@ header .navbar .logo {
   float: left;
   padding-right: 16px;
 }
-/* line 383, ../sass/style.scss */
+/* line 382, ../sass/style.scss */
+.five .footer .row-footer1 .col-footer .phone .ph img {
+  width: 30px;
+}
+/* line 386, ../sass/style.scss */
 .five .footer .row-footer1 .col-footer .phone a p {
   float: left;
   margin: 0%;
@@ -455,16 +459,20 @@ header .navbar .logo {
   text-align: left;
   color: #fff;
 }
-/* line 392, ../sass/style.scss */
+/* line 395, ../sass/style.scss */
 .five .footer .row-footer1 .col-footer .email {
   padding: 0 0 5px;
 }
-/* line 394, ../sass/style.scss */
+/* line 397, ../sass/style.scss */
 .five .footer .row-footer1 .col-footer .email .emailimg {
   float: left;
   padding-right: 16px;
 }
-/* line 398, ../sass/style.scss */
+/* line 400, ../sass/style.scss */
+.five .footer .row-footer1 .col-footer .email .emailimg img {
+  width: 30px;
+}
+/* line 404, ../sass/style.scss */
 .five .footer .row-footer1 .col-footer .email a p {
   float: left;
   margin: 0%;
@@ -474,61 +482,61 @@ header .navbar .logo {
   text-decoration: none;
   color: #fff;
 }
-/* line 408, ../sass/style.scss */
+/* line 414, ../sass/style.scss */
 .five .footer .row-footer1 .col-footer .lexlogo {
   height: auto;
   width: 79px;
   margin: 70px 0 50px;
 }
-/* line 415, ../sass/style.scss */
+/* line 421, ../sass/style.scss */
 .five .footer .row-footer1 .col-footer .social-net-logo .social {
   padding: 0 30px 0 0;
 }
-/* line 418, ../sass/style.scss */
+/* line 424, ../sass/style.scss */
 .five .footer .row-footer1 .col-footer .social-net-logo .last {
   padding: 0%;
 }
-/* line 423, ../sass/style.scss */
+/* line 429, ../sass/style.scss */
 .five .footer .row-footer1 .col2 {
   width: 24%;
 }
-/* line 426, ../sass/style.scss */
+/* line 432, ../sass/style.scss */
 .five .footer .row-footer1 .col3 {
   width: 45%;
 }
-/* line 429, ../sass/style.scss */
+/* line 435, ../sass/style.scss */
 .five .footer .row-footer1 .col4 {
   width: 100%;
 }
-/* line 434, ../sass/style.scss */
+/* line 440, ../sass/style.scss */
 .five .footer .row-footer2 {
   text-align: center;
   font-size: 14px;
   padding: 0 0 70px;
 }
-/* line 438, ../sass/style.scss */
+/* line 444, ../sass/style.scss */
 .five .footer .row-footer2 p {
   margin: 0%;
 }
 
 @media screen and (max-width: 1280px) {
-  /* line 447, ../sass/style.scss */
+  /* line 453, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 {
     width: 100%;
   }
-  /* line 449, ../sass/style.scss */
+  /* line 455, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col-footer {
     width: 35%;
   }
-  /* line 452, ../sass/style.scss */
+  /* line 458, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col2 {
     width: 25%;
   }
-  /* line 455, ../sass/style.scss */
+  /* line 461, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col3 {
     width: 40%;
   }
-  /* line 459, ../sass/style.scss */
+  /* line 465, ../sass/style.scss */
   .footer .row-footer1 .col-footer2 {
     width: 100%;
     margin: 0 auto;
@@ -536,23 +544,23 @@ header .navbar .logo {
   }
 }
 @media screen and (max-width: 1024px) {
-  /* line 471, ../sass/style.scss */
+  /* line 477, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 {
     width: 100%;
   }
-  /* line 473, ../sass/style.scss */
+  /* line 479, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col-footer {
     width: 34%;
   }
-  /* line 476, ../sass/style.scss */
+  /* line 482, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col2 {
     width: 27%;
   }
-  /* line 479, ../sass/style.scss */
+  /* line 485, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col3 {
     width: 38%;
   }
-  /* line 483, ../sass/style.scss */
+  /* line 489, ../sass/style.scss */
   .footer .row-footer1 .col-footer2 {
     width: 100%;
     margin: 0 auto;
@@ -560,70 +568,70 @@ header .navbar .logo {
   }
 }
 @media screen and (max-width: 768px) {
-  /* line 493, ../sass/style.scss */
+  /* line 499, ../sass/style.scss */
   .footer .row-footer1 {
     padding: 60px 20px 50px;
   }
 }
 @media screen and (max-width: 640px) {
-  /* line 501, ../sass/style.scss */
+  /* line 507, ../sass/style.scss */
   .footer .row-footer1 {
     padding: 0 50px 20px;
   }
-  /* line 504, ../sass/style.scss */
+  /* line 510, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col-footer {
     width: 50% !important;
     padding-right: 40px;
   }
-  /* line 508, ../sass/style.scss */
+  /* line 514, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col3 {
     width: 100% !important;
     padding-right: 0;
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 519, ../sass/style.scss */
+  /* line 525, ../sass/style.scss */
   .footer .row-footer1 {
     padding: 0 30px 20px 30px;
   }
-  /* line 522, ../sass/style.scss */
+  /* line 528, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col-footer {
     width: 50% !important;
     padding-right: 40px;
   }
-  /* line 526, ../sass/style.scss */
+  /* line 532, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col3 {
     width: 100% !important;
     padding-right: 0;
   }
 }
 @media screen and (max-width: 360px) {
-  /* line 537, ../sass/style.scss */
+  /* line 543, ../sass/style.scss */
   .footer .row-footer1 {
     padding: 0 30px 20px 30px;
   }
-  /* line 540, ../sass/style.scss */
+  /* line 546, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col-footer {
     width: 50% !important;
     padding-right: 40px;
   }
-  /* line 544, ../sass/style.scss */
+  /* line 550, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col3 {
     width: 100% !important;
     padding-right: 0;
   }
 }
 @media screen and (max-width: 320px) {
-  /* line 555, ../sass/style.scss */
+  /* line 561, ../sass/style.scss */
   .footer .row-footer1 {
     padding: 0 10px 20px 30px;
   }
-  /* line 558, ../sass/style.scss */
+  /* line 564, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col-footer {
     width: 50% !important;
     padding-right: 30px;
   }
-  /* line 562, ../sass/style.scss */
+  /* line 568, ../sass/style.scss */
   .footer .row-footer1 .col-footer1 .col3 {
     width: 100% !important;
     padding-right: 0;
