--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -148,34 +148,38 @@ header .navbar .collapse form .navbar-nav li.active a {
 .second .content .row1 .col .carousel .carousel-inner .carousel-item {
   max-height: 440;
 }
-/* line 135, ../sass/style.scss */
+/* line 130, ../sass/style.scss */
+.second .content .row1 .col .carousel .carousel-inner .carousel-item img {
+  height: 100%;
+}
+/* line 138, ../sass/style.scss */
 .second .content .row2 {
   padding: 24px 0;
 }
-/* line 138, ../sass/style.scss */
+/* line 141, ../sass/style.scss */
 .second .content .row2 .col1 {
   padding: 0 20px;
   float: left;
   width: 66%;
 }
-/* line 142, ../sass/style.scss */
+/* line 145, ../sass/style.scss */
 .second .content .row2 .col1 img {
   width: 100%;
   height: 100%;
 }
-/* line 147, ../sass/style.scss */
+/* line 150, ../sass/style.scss */
 .second .content .row2 .col2 {
   padding: 0 20px;
   float: left;
   width: 33%;
 }
-/* line 151, ../sass/style.scss */
+/* line 154, ../sass/style.scss */
 .second .content .row2 .col2 img {
   width: 100%;
   height: 100%;
 }
 
-/* line 161, ../sass/style.scss */
+/* line 164, ../sass/style.scss */
 .three .heading {
   background-image: linear-gradient(180deg, black 0%, rgba(163, 163, 163, 0.99) 0%, white 100%);
   background-repeat: repeat;
@@ -186,53 +190,53 @@ header .navbar .collapse form .navbar-nav li.active a {
   color: #242847;
   text-align: center;
 }
-/* line 170, ../sass/style.scss */
+/* line 173, ../sass/style.scss */
 .three .heading h2 {
   font-size: 50px;
   font-weight: 900;
   margin: 0;
 }
-/* line 176, ../sass/style.scss */
+/* line 179, ../sass/style.scss */
 .three .content {
   padding: 0 7%;
 }
-/* line 178, ../sass/style.scss */
+/* line 181, ../sass/style.scss */
 .three .content .row1 {
   padding-top: 24px;
   max-height: 566px;
 }
-/* line 181, ../sass/style.scss */
+/* line 184, ../sass/style.scss */
 .three .content .row1 .col1 {
   padding: 0 20px;
   float: left;
   width: 66%;
 }
-/* line 185, ../sass/style.scss */
+/* line 188, ../sass/style.scss */
 .three .content .row1 .col1 img {
   width: 100%;
   height: 100%;
 }
-/* line 190, ../sass/style.scss */
+/* line 193, ../sass/style.scss */
 .three .content .row1 .col2 {
   padding: 0 20px;
   float: left;
   width: 33%;
 }
-/* line 194, ../sass/style.scss */
+/* line 197, ../sass/style.scss */
 .three .content .row1 .col2 img {
   width: 100%;
   height: 100%;
 }
 
-/* line 203, ../sass/style.scss */
+/* line 206, ../sass/style.scss */
 .four {
   padding-top: 50px;
 }
-/* line 205, ../sass/style.scss */
+/* line 208, ../sass/style.scss */
 .four .content {
   margin: 0 7%;
 }
-/* line 207, ../sass/style.scss */
+/* line 210, ../sass/style.scss */
 .four .content .col {
   float: left;
   margin: 0 23px;
@@ -243,7 +247,7 @@ header .navbar .collapse form .navbar-nav li.active a {
   padding: 10% 0;
   text-align: center;
 }
-/* line 216, ../sass/style.scss */
+/* line 219, ../sass/style.scss */
 .four .content .col h2 {
   color: #7d7d7d;
   font-size: 1.5em;
@@ -252,20 +256,20 @@ header .navbar .collapse form .navbar-nav li.active a {
   letter-spacing: .03em;
   font-weight: bold;
 }
-/* line 224, ../sass/style.scss */
+/* line 227, ../sass/style.scss */
 .four .content .col p {
   font-size: 25px;
   color: #7d7d7d;
 }
 
-/* line 232, ../sass/style.scss */
+/* line 235, ../sass/style.scss */
 .footer {
   background-color: #d9d9d9;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 54px 0 2em;
 }
-/* line 237, ../sass/style.scss */
+/* line 240, ../sass/style.scss */
 .footer a {
   text-decoration: none;
   display: inline-block;
@@ -279,7 +283,7 @@ header .navbar .collapse form .navbar-nav li.active a {
   -moz-transition: all .5s;
   transition: all .5s;
 }
-/* line 250, ../sass/style.scss */
+/* line 253, ../sass/style.scss */
 .footer a:before {
   font-size: 3rem;
   content: "\005E";
