--- a/sass/aboutus.scss
+++ b/sass/aboutus.scss
@@ -19,6 +19,7 @@ html, body {
   position: relative;
   overflow-x: hidden;
   background-color: #fff;
+  scroll-behavior: smooth;
 }
 /* line 17, ../sass/style.scss */
 html li, html a, body li, body a {
@@ -28,6 +29,42 @@ html li, html a, body li, body a {
 /* line 22, ../sass/style.scss */
 div {
   margin: 0%;
+}
+
+header {
+  text-align: inherit;
+  padding: .15em 28px;
+  background-color: #d9d9d9;
+  width: 100%;
+  min-height: 55px;
+  z-index: 999;
+  .navbar {
+    .navbar-brand {
+     font-weight: bold;
+     letter-spacing: 1px;
+     color: #fff;
+     font-size: 36px;
+     display: inline-block;
+     vertical-align: middle;
+   }
+   .collapse form {
+     position: absolute;
+     right: 0;
+     .navbar-nav {
+       li {
+       a {
+         color: #fff;
+         font-size: 20px;
+         font-weight: bold;
+       }
+       &.active {
+        a { color: #e4c272;
+        }
+       }
+       }
+     }
+   }
+  }
 }
 
 .first {
