--- a/sass/services.scss
+++ b/sass/services.scss
@@ -14,6 +14,7 @@ html, body {
   position: relative;
   overflow-x: hidden;
   background-color: #fff;
+   scroll-behavior: smooth;
   li, a {
     text-decoration: none !important;
   }
@@ -22,7 +23,44 @@ html, body {
 div {
   margin: 0%; }
 
+  header {
+    text-align: inherit;
+    padding: .15em 28px;
+    background-color: #d9d9d9;
+    width: 100%;
+    min-height: 55px;
+    z-index: 999;
+    .navbar {
+      .navbar-brand {
+       font-weight: bold;
+       letter-spacing: 1px;
+       color: #fff;
+       font-size: 36px;
+       display: inline-block;
+       vertical-align: middle;
+     }
+     .collapse form {
+       position: absolute;
+       right: 0;
+       .navbar-nav {
+         li {
+         a {
+           color: #fff;
+           font-size: 20px;
+           font-weight: bold;
+         }
+         &.active {
+          a { color: #e4c272;
+          }
+         }
+         }
+       }
+     }
+    }
+  }
+
 .first {
+  position: relative;
   video {
     min-width: 100%;
   }
@@ -290,9 +328,9 @@ div {
     line-height: 1;
     z-index: 10;
     color: inherit;
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    transition: all .5s;
+    -webkit-transition: all .100s;
+    -moz-transition: all .100s;
+    transition: all .100s;
   }
   a:before {
     font-size: 3rem;
