--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,7 @@ html, body {
   position: relative;
   overflow-x: hidden;
   background-color: #fff;
+   scroll-behavior: smooth;
   li, a {
     text-decoration: none !important;
   }
